--- a/roles/os-tuning/tasks/main.yml
+++ b/roles/os-tuning/tasks/main.yml
@@ -106,7 +106,14 @@
   sysctl: name=vm.overcommit_memory value=1 state=present reload=yes
   when: os.advanced_tuning
 
-- name: Memory - increase dirty memory amount threshold (kernel) (amount of system memory that can be filled with dirty pages before everything must get committed to disk)
+- name: Memory - reduce dirty memory amount threshold (kernel) (amount of system memory that can be filled with dirty pages before everything must get committed to disk)
+  # significantly reduce the amount of data the kernel is allowed to store
+  # in memory between fsyncs
+  # dirty_background_bytes says how many bytes can be dirty before the kernel
+  # starts flushing in the background. Set this as low as you can get away with.
+  # It is basically equivalent to trickle_fsync=true but more efficient since the
+  # kernel is doing it. Older kernels will need to use vm.dirty_background_ratio
+  # instead.
   sysctl: name=vm.dirty_background_bytes value=10485760 state=present reload=yes
   when: os.advanced_tuning
 
