--- a/group_vars/dc1.yml
+++ b/group_vars/dc1.yml
@@ -1,7 +1,8 @@
 #Cassandra DCX  configuration
 cassandra:
-  seeds: '10.240.0.24,10.240.0.23,10.240.0.25'
-  dc: 'DC1'
+  datacenter: 'DC1'
+  rack: 'RACK1'
+  prefer_local: True
 #Spark configuration
 spark:
   enabled: False
