--- a/roles/dse-install/tasks/main.yml
+++ b/roles/dse-install/tasks/main.yml
@@ -1,7 +1,6 @@
-- include: dependencies.yml
+- include: dependencies_{{ansible_os_family}}.yml
 - include: dse-install.yml
 - include: dse-spark-install.yml
   when: spark.enabled
 - include: datastax-agent-install.yml
   when: install_agent
-- include: start-dse.yml
