--- a/roles/common/tasks/java_RedHat.yml
+++ b/roles/common/tasks/java_RedHat.yml
@@ -1,3 +1,9 @@
+- name: install epel-release (CentOS)
+  yum:
+    name: epel-release
+    state: present
+    update_cache: yes
+
 - name: installing some extra dependencies
   yum:
     name: "{{item}}"
@@ -5,50 +11,34 @@
   with_items:
     - wget
     - curl
-    #- htop #htop not present by default.
+    - htop
     - vim
     - sysstat
+
 
 - name: Fetch Java version
   shell: java -version 2>&1 | grep version | awk '{print $3}' | sed 's/"//g'
   ignore_errors: true
   register: installed_java_version
 
-- name: create /tmp/java8/extract folder
-  file: state=directory path=/tmp/java8/extract owner=root group=root recurse=yes
-  when: installed_java_version|failed or installed_java_version.stdout == '' or installed_java_version.stdout | version_compare('1.8', '<')
+- name: Copy java rpm file to server
+  copy:
+     src: jdk-8u171-linux-x64.rpm
+     dest: /tmp/jdk-8u171-linux-x64.rpm
+  when: installed_java_version is failed or installed_java_version.stdout == '' or installed_java_version.stdout is version_compare('1.8', '<')
 
-- name: Download Java from {{java_download_url}}
-  command: "wget -O /tmp/java8/java-8-oracle.tar.gz --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{java_download_url}} creates=/tmp/java8/java-8-oracle.tar.gz"
-  when: installed_java_version|failed or installed_java_version.stdout == '' or installed_java_version.stdout | version_compare('1.8', '<')
+- name: Install java package.
+  yum:
+     name: /tmp/jdk-8u171-linux-x64.rpm
+     state: present
+  when: installed_java_version is failed or installed_java_version.stdout == '' or installed_java_version.stdout is version_compare('1.8', '<')
 
-- name: Create /usr/lib/jvm directory
+- name: Clean java rpm
   file:
-    path: /usr/lib/jvm
-    owner: root
-    group: root
-    state: directory
-    mode: 0755
-
-- name: Unpack archive
-  unarchive:
-    remote_src: yes
-    src: /tmp/java8/java-8-oracle.tar.gz
-    dest: /tmp/java8/extract
-  when: installed_java_version|failed or installed_java_version.stdout == '' or installed_java_version.stdout | version_compare('1.8', '<')
-
-- name: copy /tmp/java8/extract/{{java_version}}/* to /usr/lib/jvm/{{java_version}}/
-  command: mv /tmp/java8/extract/{{java_version}} /usr/lib/jvm/
-  when: installed_java_version|failed or installed_java_version.stdout == '' or installed_java_version.stdout | version_compare('1.8', '<')
-
-- name: Fix ownership
-  file: state=directory path=/usr/lib/jvm/{{java_version}} owner=root group=root recurse=yes
-  when: installed_java_version|failed or installed_java_version.stdout == '' or installed_java_version.stdout | version_compare('1.8', '<')
+    state: absent
+    path: /tmp/jdk-8u171-linux-x64.rpm
+  when: installed_java_version is failed  or installed_java_version.stdout == '' or installed_java_version.stdout is version_compare('1.8', '<')
 
 - name: Make Java available for system
-  command: 'alternatives --install "/usr/bin/java" "java" "/usr/lib/jvm/{{java_version}}/bin/java" 2000'
-  when: installed_java_version|failed or installed_java_version.stdout == '' or installed_java_version.stdout | version_compare('1.8', '<')
-
-#- name: Clean up extracted archive
-#  file: state=absent path=/tmp/java8
-#  when: installed_java_version.stdout | version_compare('1.8', '<')
+  command: 'alternatives --install "/usr/bin/java" "java" "/usr/java/latest/bin/java" 2000'
+  when: installed_java_version is failed  or installed_java_version.stdout == '' or installed_java_version.stdout is version_compare('1.8', '<')
