--- a/roles/dse-conf/templates/cassandra/cassandra-rackdc.properties
+++ b/roles/dse-conf/templates/cassandra/cassandra-rackdc.properties
@@ -1,3 +1,3 @@
-dc={{cassandra.datacenter}}
-rack={{cassandra.rack}}
-prefer_local={{cassandra.prefer_local}}
+dc={{dse.cassandra.datacenter}}
+rack={{dse.cassandra.rack}}
+prefer_local={{dse.cassandra.prefer_local}}
