--- a/roles/dse-install/tasks/dependencies_Debian.yml
+++ b/roles/dse-install/tasks/dependencies_Debian.yml
@@ -1,5 +1,5 @@
 - name: adding dse repo
-  apt_repository: repo='deb http://{{dse_username}}:{{dse_password}}@debian.datastax.com/enterprise stable main' state=present update_cache=yes
+  apt_repository: repo='deb http://{{dse.repo_username}}:{{dse.repo_password}}@debian.datastax.com/enterprise stable main' state=present update_cache=yes
   register: dseAptkey
 
 - name: adding dse repo key
