--- a/roles/dse-install/templates/spark/spark-defaults.conf
+++ b/roles/dse-install/templates/spark/spark-defaults.conf
@@ -33,8 +33,8 @@ spark.sql.hive.metastore.sharedPrefixes  com.typesafe.scalalogging
 # Port on which the external shuffle service will run
 spark.shuffle.service.port 7737
 
-spark.driver.memory {{spark.driver_memory}}
+spark.driver.memory {{dse.spark.driver_memory}}
 
 
-spark.eventLog.enabled {{spark.eventLog_enabled}}
-spark.eventLog.dir {{spark.eventLog_dir}}
+spark.eventLog.enabled {{dse.spark.eventLog_enabled}}
+spark.eventLog.dir {{dse.spark.eventLog_dir}}
